# forest_health_project

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  LICENSE  Makefile  README.md  README.rst  environment.yml  pyproject.toml
.github/workflows/: run_tests.yaml
src/fhealth/: params.py
src/fhealth/dataset/: extract_data.py  get_data.py  load_data.py  transform_data.py
src/fhealth/modeling/: create_dataset.py  dataset.py  u_net.py
src/fhealth/models/: u_net.py
src/fhealth/train/: create_dataset.py  losses.py  metrics.py  plot.py
src/fhealth/utils/: model_helpers.py  plot.py
tests/: test_create_dataset.py  test_extract_data.py  test_load_data.py  test_transform_data.py
