[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fhealth"
version = "0.1.0"
authors = [{name = "DridrM"}]
description = "Monitoring the health of forests through sattelite imagery and deep learning"
readme = "README.rst"
license = {file = "LICENSE"}

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
